--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           name: dist-files
       - name: Output contents
-        run: ls -l
+        run: ls -lR
       - name: Output filename
         run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
